[tool.poetry]
name = "rt-project"
version = "0.1.0"
description = "크랙 캐릭터 데이터 파이프라인"
authors = ["Chanyeong <pcy7805@naver.com>"]
readme = "README.md"
packages = [{include = "rt_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"
psycopg2-binary = "^2.9.0"
pandas = "^2.0.0"
redis = "^4.0.0"
celery = "^5.2.0"
click = "^8.0.0"
# Airflow는 베이스 이미지에 이미 설치되어 있으므로 제외

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^5.13.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crack-crawler = "rt_project.crawlers.crack_crawler:cli"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 88
exclude = [".git", "__pycache__", "docs/", "old/", "build/", "dist/"]